--- a/styles/while.qss
+++ b/styles/while.qss
@@ -7,7 +7,7 @@ border-style: solid;
 border-width: 1px;
 border-color: white;
 }
-QLabel, QLineEdit
+QLabel, QLineEdit, .QWidget
 {
     color: white;
     background-color: #003366;
