--- a/styles/def.qss
+++ b/styles/def.qss
@@ -1,7 +1,7 @@
 indentBlock
 {
 color: white;
-background-color: #009e73;
+background-color: #000000;
 border-radius: 10px;
 border-style: solid;
 border-width: 2px;
@@ -10,8 +10,8 @@ border-color: white;
 QLabel, .QWidget
 {
     color: white;
-    background-color: #009e73;
-    border-radius: 3px;
+    background-color: #000000;
+    border-radius: 5px;
     border-style: solid;
 }
 QLineEdit
