--- a/styles/return.qss
+++ b/styles/return.qss
@@ -1,16 +1,16 @@
-indentBlock
+block
 {
 color: white;
-background-color: #009e73;
+background-color: cyan;
 border-radius: 10px;
 border-style: solid;
 border-width: 2px;
 border-color: white;
 }
-QLabel, .QWidget
+QLabel
 {
-    color: white;
-    background-color: #009e73;
+    color: black;
+    background-color: cyan;
     border-radius: 3px;
     border-style: solid;
 }
